Added gem premailer and vagrant

--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -1,7 +1,17 @@
 a {
   color: #554fe0;
+  line-height: 1;
 }
 
+p,td,div,a {
+  -moz-hyphens:none;
+  -ms-hyphens:none;
+  -webkit-hyphens: none;
+  hyphens:none;
+}
+p,td,div,a {
+  word-break:keep-all;
+}
 
 /* Firefox display hack */
 @media only screen and (max-width: 600px) {
